deploy/service1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
  labels:
    component: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: service1
  template:
    metadata:
      labels:
        component: service1
    spec:
      containers:
        - name: service1
          image: xmhai/service1:1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  type: NodePort
  selector:
    component: service1
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
