deploy/grafana-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-host
spec:
  rules:
  - host: "grafana.k8s"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loki-grafana
            port:
              number: 80
