deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  rules:
  - http:
      paths:
      - path: /mainservice
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 8082
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: service1-service
            port:
              number: 8081
